<resources>
    <string name="app_name">Walmart</string>
    <string name="email_address">Email Address (Required)</string>
    <string name="password_required">Password (Required)</string>
    <string name="sign_in">Sign In</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="title_activity_shopping">ShoppingActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Walmart</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="clothings">Clothings</string>
    <string name="beauty">Beauty</string>
    <string name="food">Food</string>
    <string name="create_account">Create Account</string>
    <string name="create_your_account">Create your account</string>
    <string name="title_activity_electronics">Electronics</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="color">Color</string>
    <string name="price">Price</string>
    <string name="devicename">Name</string>
</resources>